--- a/Projekt Dalastubben/style.css
+++ b/Projekt Dalastubben/style.css
@@ -8,6 +8,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
 /* Merriweather */
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+/* Kenya Coffee */
+
+@font-face {
+    font-family: 'Kenya Coffee';
+    src: url('../fonts/kenyan coffee rg.ort') format('opentype');
+}
 
 /* ****************************************** */
 
@@ -35,7 +41,6 @@ p {
 .btn {
     background-color: #212121;
     color: #f5f5f7;
-    width: 100px;
 }
 
 .btn:hover {
@@ -61,14 +66,10 @@ h1 {
 
 .card-title {
     font-family: 'Alfa Slab One';
+    font-size: 1.5rem;
 }
 
 /* Navbar */
-.navbar {
-    /* margin-bottom: 10px; */
-    /* background-color: #f5f5f7; */
-}
-
 .sticky {
     position: fixed;
     top: 0;
@@ -80,17 +81,14 @@ h1 {
     background-color: #f5f5f7 !important;
 }
 
-
-/* Social media icons */
-.icon {
-    width: 40px;
-}
-
 /* Container */
-.container {
-    /* min-height: 80vh; */
+
+.home-container {
+    display: grid;
+    grid-template-columns: 1fr;
 }
 
+/* Card */
 .card {
     margin-top: 10px;
     margin-bottom: 25px !important;
@@ -98,10 +96,11 @@ h1 {
 
 .card-title {
     text-align: center;
+    font-size: 2rem;
 }
 
-.card-text::first-line {
-    text-indent: 1.5em !important;
+.card-text {
+    text-indent: 1rem !important;
 }
 
 /* Scroll-snap-stop */
@@ -121,15 +120,35 @@ footer {
     opacity: 90%;
 }
 
-@media (min-width: 991px ){
+@media (min-width: 991px) {
 
     .logo {
-        width: 350px;
+        width: 250px;
     }
 
     /* Container */
-    .home-container, .about-container {
-        max-width: 700px;
+    .home-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .home-header {
+        display: none;
+    }
+
+    .about-container {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .card {
+        padding-top: 5px;
+        padding-right: 5px;
+        padding-left: 5px;
+    }
+
+    .card-title {
+        font-size: 1.5rem;
     }
 }
 
@@ -137,5 +156,10 @@ footer {
 
     h1 {
         font-size: 2rem;
+    }
+
+    .homecontainer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
 }
