--- a/Projekt Dalastubben/style.css
+++ b/Projekt Dalastubben/style.css
@@ -8,12 +8,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
 /* Merriweather */
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
-/* Kenya Coffee */
-
-@font-face {
-    font-family: 'Kenya Coffee';
-    src: url('../fonts/kenyan coffee rg.ort') format('opentype');
-}
 
 /* ****************************************** */
 
@@ -22,20 +16,20 @@ body {
     background-color: #f5f5f7;
 }
 
-/* Viewport height for Header and center-container */
+/* Viewport height for Header */
 header {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     flex-direction: column;
+    height: 100vh;
 }
 
+/* Giving each scroll item container (on home page) flex attributes */
 .center-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     flex-direction: column;
 }
 
@@ -76,16 +70,12 @@ p {
 
 /* Logo size */
 .logo {
-    width: 250px;
+    width: 20rem;
 }
 
 /* Title */
 h1 {
     font-size: 1.7rem;
-}
-
-.home-title {
-    text-align: center;
 }
 
 .card-title {
@@ -99,9 +89,13 @@ h1 {
     grid-template-columns: 1fr;
 }
 
+.about-container {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
 /* Card */
 .card {
-    padding-bottom: 5rem;
     background-color: #f5f5f7;
     border: 0;
 }
@@ -117,12 +111,15 @@ h1 {
 }
 
 /* Scroll-snap-stop */
+/* With removing scrollbar : Source: https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
 .scroll-container {
+    scroll-behavior: smooth;
+    overflow-y: scroll;
     height: 100vh;
     scroll-snap-type: y mandatory;
-    /* Hide scrollbar for IE, Edge, and Firefox  */
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    /* Hide scrollbar for IE, Edge, and Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -131,7 +128,7 @@ h1 {
 }
 
 .scroll-item {
-    scroll-snap-align: start;
+    scroll-snap-align: center;
     height: 100vh;
     box-sizing: border-box;
     display: flex;
@@ -140,12 +137,12 @@ h1 {
     align-items: center;
 }
 
+/* Remove sizing from textarea on contact page */
 textarea {
     resize: none;
 }
 
-/* FAQ, remove colouring to accordion */
-
+/* FAQ, remove colouring of bootstrap accordion */
 .accordion-button:not(.collapsed) {
     background-color: transparent;
 }
@@ -161,7 +158,7 @@ textarea {
         opacity: 1;
     }
 }
-  
+
 @keyframes fadeIn {
     0% {
         opacity: 0;
@@ -169,8 +166,8 @@ textarea {
     100% {
         opacity: 1;
     }
-  }
-  
+}
+
 @keyframes bounceFromRight {
     0% {
         transform: translateX(100%);
@@ -182,39 +179,29 @@ textarea {
     }
 }
 
-.bounceFromLeft,
-.fadeIn,
-.bounceFromRight {
+.bounceFromLeft, .fadeIn, .bounceFromRight {
     opacity: 0;
-}  
+}
 
-@media (min-width: 991px) {
+@media (min-width: 1200px) {
 
-    .logo {
-        width: 400px;
-    }
-
-    /* Container */
     .home-container {
-        display: grid;
         grid-template-columns: 1fr 1fr 1fr;
     }
+}
 
-    .home-header {
-        display: none;
-    }
-
-    .about-container {
-        display: grid;
-        grid-template-columns: 1fr;
-    }
-
+@media (min-width: 991px) {
+    
     .card-title {
         font-size: 1.5rem;
     }
 }
 
 @media (min-width: 768px) {
+
+    .logo {
+        width: 25rem;
+    }
 
     h1 {
         font-size: 2rem;
